fixed layout in the shopping cart section to keep its spacing across sizes

--- a/src/components/CartTotal/style.css
+++ b/src/components/CartTotal/style.css
@@ -8,6 +8,8 @@
     padding: 1rem 1rem 0 1rem;
     border: 1px solid rgb(182, 180, 180);
     border-top: none;
+    position: absolute;
+    bottom: 110px
 }
 
 .left {
@@ -18,6 +20,17 @@
     background-color: rgb(88, 126, 182);
 }
 
+.proceed {
+    position: absolute;
+    bottom: 45px;
+}
+
+.clear-cart {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 0;
+}
+
 .proceed:hover {
     background-color: green;
 }
@@ -25,3 +38,8 @@
 .clear-cart:hover {
     background-color: rgb(189, 0, 0);
 }
+
+.cart-btn {
+
+}
+
